2012-11-20  Mateusz Leszko  <m.leszko@samsung.com>

        [EFL][GTK]Sharing accessibility support in WebKitTestRunner.
        https://bugs.webkit.org/show_bug.cgi?id=99011

        Reviewed by Martin Robinson.

        Accessibility files from gtk folder are moved to atk folder due to common implementation. Event Type naming changed to default, from Gtk to ATK.

        * WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp: Renamed from Tools/WebKitTestRunner/InjectedBundle/gtk/AccessibilityControllerGtk.cpp.
        (WTR::AccessibilityController::logAccessibilityEvents):
        * WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp: Renamed from Tools/WebKitTestRunner/InjectedBundle/gtk/AccessibilityUIElementGtk.cpp.

2012-11-20  Zan Dobersek  <zandobersek@gmail.com>

        webkitpy unit tests should run serially when checking code coverage
        https://bugs.webkit.org/show_bug.cgi?id=102693

        Reviewed by Dirk Pranke.

        When checking code coverage, the unit tests should not be run in parallel
        as this causes the tracing functions (set via sys.settrace in the coverage
        module) being overriden, resulting in incorrect coverage reports.

        * Scripts/webkitpy/test/main.py:
        (Tester._run_tests):

2012-11-19  Viatcheslav Ostapenko  <v.ostapenko@samsung.com>

        [EFL] Add fallback for WebkitTestRunner if opengl is not available.
        https://bugs.webkit.org/show_bug.cgi?id=102704

        Reviewed by Laszlo Gombos.

        Add fallback to non-opengl evas engine in WebkitTestRunner if opengl is not available.

        * WebKitTestRunner/efl/PlatformWebViewEfl.cpp:
        (WTR::initEcoreEvas):

2012-11-19  Dimitri Glazkov  <dglazkov@chromium.org>

        [garden-o-matic] Switch frontend to use the gardeningserver.
        https://bugs.webkit.org/show_bug.cgi?id=102712

        Reviewed by Dirk Pranke.
