@@ -2285,14 +2285,14 @@ sub buildQMakeProjects
 
     my $buildHint = "";
 
-    my $pathToQmakeCache = File::Spec->catfile($dir, ".qmake.cache");
-    if (-e $pathToQmakeCache && open(QMAKECACHE, $pathToQmakeCache)) {
-        while (<QMAKECACHE>) {
+    my $pathToBuiltRevisions = File::Spec->catfile($dir, ".builtRevisions.cache");
+    if (-e $pathToBuiltRevisions && open(BUILTREVISIONS, $pathToBuiltRevisions)) {
+        while (<BUILTREVISIONS>) {
             if ($_ =~ m/^SVN_REVISION\s=\s(\d+)$/) {
                 $previousSvnRevision = $1;
             }
         }
-        close(QMAKECACHE);
+        close(BUILTREVISIONS);
     }
 
     my $result = 0;
@@ -2360,9 +2360,9 @@ sub buildQMakeProjects
 
     if ($result eq 0) {
         # Now that the build completed successfully we can save the SVN revision
-        open(QMAKECACHE, ">>$pathToQmakeCache");
-        print QMAKECACHE "SVN_REVISION = $svnRevision\n";
-        close(QMAKECACHE);
+        open(BUILTREVISIONS, ">>$pathToBuiltRevisions");
+        print BUILTREVISIONS "SVN_REVISION = $svnRevision\n";
+        close(BUILTREVISIONS);
     } elsif (!$command =~ /incremental/ && exitStatus($result)) {
         my $exitCode = exitStatus($result);
         my $failMessage = <<EOF;
